Fix: responsive layout for checkout page on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -397,6 +397,8 @@ button:active {
   font-weight: bold;
 }
 
+
+
 /* End checkout styles */
 
 @media screen and (min-width: 500px) {
@@ -412,8 +414,25 @@ button:active {
   .cart-card {
     font-size: inherit;
     grid-template-columns: 150px auto 15%;
+  }  
+}
+
+@media screen and (max-width: 600px) {
+  .checkout {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .checkout section {
+    margin: 1rem;
+    width: 100%;
+  }
+
+  .checkout form {
+    width: 100%;
   }
 }
+
 
 footer {
   font-size: var(--small-font);
